# RafaelCalcada-RVX-RISC-V-Microcontroller

./: .gitignore  .gitmodules  .verible-format  404.html  CODING_STANDARDS.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  LICENSE.md  README.md  index.html  mkdocs.yml  rvx.code-workspace
.devcontainer/: Dockerfile  devcontainer.json  python_requirements.txt  setup_env.sh
docs/: hardware.md  index.md  mkdocs.yml
docs/examples/: freertos.md
docs/source/: hardware.md  index.md  userguide.md
etc/: .clang-format
examples/freertos/: index.html
examples/helloworld/: index.html
hardware/: index.html  rvx.v  rvx_bus.v  rvx_core.v  rvx_gpio.v  rvx_mtimer.v  rvx_ram.v  rvx_spi.v  rvx_uart.v
riscv_compliance/: Makefile  run_tests.py
riscv_compliance/riscv_test_suite/: Makefile  spike.ld
riscv_compliance/verilator/: .gitignore  Makefile  unit_tests.py
rtl/: rvx.v  rvx_bus.v  rvx_constants.vh  rvx_core.v  rvx_core_address_gen.v  rvx_core_alu.v  rvx_core_branch.v  rvx_core_csr_file.v  rvx_core_dbus.v  rvx_core_decoder.v  rvx_core_ibus.v  rvx_core_immediate_gen.v  rvx_core_integer_file.v  rvx_core_load_unit.v  rvx_core_pc_gen.v  rvx_core_state.v  rvx_core_store_unit.v  rvx_core_trap.v  rvx_gpio.v  rvx_macros.vh  rvx_mtimer.v  rvx_ocelot.v  rvx_ram.v  rvx_spi.v  rvx_uart.v
rtl/core/: rvx_core.v  rvx_core_address_gen.v  rvx_core_alu.v  rvx_core_branch.v  rvx_core_bus_controller.v  rvx_core_constants.vh  rvx_core_csr_file.v  rvx_core_decoder.v  rvx_core_immediate_gen.v  rvx_core_integer_file.v  rvx_core_load_unit.v  rvx_core_mdu.v  rvx_core_pc_gen.v  rvx_core_state.v  rvx_core_store_unit.v  rvx_core_trap.v
rtl/interconnect/: rvx_bus.v
rtl/memory/: rvx_ram.v  rvx_tightly_coupled_memory.v
rtl/peripherals/: rvx_gpio.v  rvx_spi.v  rvx_spi_manager.v  rvx_timer.v  rvx_uart.v
search/: search_index.json
simulations/spi_manager/: README.md
simulator/: .gitignore  CMakeLists.txt  Makefile  rvx_simulator.cpp  rvx_simulator.v  verilator_args.vc  verilator_config.vlt
testbenches/: rvx_test_macros.vh
tests/: CMakeLists.txt  Makefile
tests/hal/: CMakeLists.txt  Makefile
tests/hal/include/: rvx_hal_gpio_test.h  rvx_hal_timer_test.h
tests/hal/source/: rvx_hal_spi_manager_test.c  rvx_hal_tests.c  rvx_hal_uart_test.c
userguide/: index.html
(+238 files in other folders)
